--- a/WEB_PRACTICA_FINAL/css/styles_aboutus.css
+++ b/WEB_PRACTICA_FINAL/css/styles_aboutus.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-color: #f4f4ed;
+  background-color: var(--color-blanco-fondo);
 }
 
 /* CÓDIGO DEL NAV >>>>>>>>>>>>>>>>>>>>>>>>>*/
@@ -24,7 +24,7 @@ nav {
   height: 4em;
   margin: 2em;
   background-color: var(--color-blanco-fondo);
-  border: 2px solid #1c1a31; 
+  border: 2px solid var(--color-negro-texto); 
   border-radius: 50px;
 
   display: block;
@@ -70,7 +70,7 @@ nav {
 #menu > ul > li > button {
   height: 2em;
   padding: 0 1em;
-  background-color: #f61067;
+  background-color: #f61067; 
   border: 2px solid #f61067;
   border-radius: 50px;
 }
@@ -148,12 +148,6 @@ nav {
   width: 60%;
 }
 
-.infofooter p{
-    color: #f4f4ed;
-}
-.infofooter a{
-  color: #f4f4ed;
-}
 
 .aboutustitle {
   margin: 0vw 4vw;
@@ -260,7 +254,7 @@ h1:hover {
 .botonparallax img {
   width: 20px;
   margin-left: 0.7em;
-  color: #f4f4ed;
+  color: var(--color-blanco-fondo);
 }
 
 .btn-outline-secondary:hover img {
@@ -299,7 +293,7 @@ h1:hover {
 .carousel .card {
   border-radius: 25px;
   align-items: center;
-  background-color: #00f0b5;
+  background-color: var(--color-verde-links);
   padding: 3em;
 }
 
@@ -501,8 +495,17 @@ a {
 .footer {
   display: flex;
   flex-direction: row;
-  background-color: #f61067;
+  background-color: var(--color-rosa-hover);
 }
+
+.infofooter p{
+  color: var(--color-blanco-fondo);
+}
+
+.infofooter a{
+color: var(--color-blanco-fondo);
+}
+
 
 .redesaboutus {
   height: 40vw;
@@ -512,7 +515,7 @@ a {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  background-color: #f61067;
+  background-color: var(--color-rosa-hover);
   padding-left: 4em;
 }
 
@@ -522,14 +525,14 @@ a {
 }
 
 .redes i {
-  color: #f4f4ed;
+  color: var(--color-blanco-fondo);
   margin-right: 6.7vw;
   width: 4vw;
   font-size: 4vw;
 }
 
 .redes i:hover {
-  color: #1c1a31;
+  color: var(--color-negro-texto);
   transition: color 0.3s ease;
 }
 
@@ -552,17 +555,17 @@ a {
 
 .footer-section h5 {
   font-size: 1.2vw;
-  color:#f4f4ed;
+  color:var(--color-blanco-fondo);
 }
 
 .footer-section h5:hover {
-  color: #1c1a31;
+  color: var(--color-negro-texto);
   transition: color 0.3s ease;
 }
 
 
 .footer-section p:hover {
-  color: #1c1a31;
+  color:var(--color-negro-texto);
   transition: color 0.3s ease;
 }
 
@@ -572,7 +575,7 @@ a {
 }
 
 .footer-section a:hover {
-  color: #1c1a31;
+  color: var(--color-negro-texto);
   transition: color 0.3s ease;
 }
 
@@ -584,19 +587,19 @@ a {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  background-color: #f61067;
+  background-color: var(--color-rosa-hover);
   padding-right: 4em;
 }
 
 .newsletter_wrapper h2 {
-  color: #f4f4ed;
+  color: var(--color-blanco-fondo);
   position: relative;
   margin-bottom: 0.3em;
   font-size: 3.2vw;
 }
 
 .newsletter_wrapper p {
-  color: #f4f4ed;
+  color: var(--color-blanco-fondo);
   font-size: 1.5vw;
   line-height: 2.2vw;
   margin: 0;
@@ -632,8 +635,8 @@ a {
   border-style: solid;
   background-color: #f4f4ed;
   border-radius: 25px;
-  color: #f61067;
-  border-color: #f61067;
+  color: var(--color-rosa-hover);
+  border-color: var(--color-rosa-hover);
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
