--- a/WEB_PRACTICA_FINAL/css/styles.css
+++ b/WEB_PRACTICA_FINAL/css/styles.css
@@ -43,6 +43,9 @@ nav {
 
     display: block;
     z-index: 999;
+    position: fixed;
+    width: 90%;
+    align-self: center;
 }
 
 #menu {
@@ -59,11 +62,11 @@ nav {
     margin-top: 0.4em;
 }
 
-#logo > img {
+#logo > a > img {
     height: 5em;
     position: absolute;
-    top: 1.5em;
-    left: 70px;
+    top: -10px;
+    left: 20px;
 }
 
 #menu > ul {
@@ -155,7 +158,7 @@ nav {
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 
 #portada_home {
-    margin: 1em 2em 0 2em;
+    margin: 8em 2em 0 2em;
     padding: 2em 1em;
     min-height: calc(100vh - 15em);
 
@@ -204,7 +207,7 @@ nav {
     height: 30%;
     position: absolute;
     z-index: 3;
-    bottom: 11%;
+    bottom: 13%;
     left: 30%;
 }
 
@@ -519,6 +522,7 @@ button.rosa:hover > svg > path {
 section#community {
     min-height: 100vh;
     background-color: var(--color-blanco-fondo);
+    padding-bottom: 4em;
 }
 
 div.section_title {
@@ -557,15 +561,13 @@ div#gallery_community.horizontal-scroll {
     margin-top: 300px;
   
 }
-
-
-  
+ 
 .carousel-inner .carousel-item.active,
 .carousel-inner .carousel-item-next,
 .carousel-inner .carousel-item-prev {
     display: flex;
 }
-  
+
   
 @media (min-width: 768px) {
     
@@ -610,15 +612,231 @@ div.card-img > img {
     
 }
 
-/* @media (max-width: 767px) {
-    
-} */
+/* ////////////////////////////////////////////////// */
+
+/* seccion footer */
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--color-rosa-hover);
+}
+
+.infofooter p{
+    color: var(--color-blanco-fondo);
+}
+
+.infofooter a{
+    color: var(--color-blanco-fondo);
+}
+
+.redesaboutus {
+    height: 40vw;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: var(--color-rosa-hover);
+    padding-left: 4em;
+}
+
+.redes {
+    width: 100%;
+    margin-bottom: 6vw;
+}
+
+.redes i {
+    color: var(--color-blanco-fondo);
+    margin-right: 6.7vw;
+    width: 4vw;
+    font-size: 4vw;
+}
+
+.redes i:hover {
+    color: var(--color-negro-texto);
+    transition: color 0.3s ease;
+}
+
+.infofooter {
+    display: flex;
+    flex-direction: row;
+}
+
+.infofooter p {
+    margin-bottom: 0.4em;
+    font-size: 1vw;
+}
+
+.footer-section {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-right: 3vw;
+}
+
+.footer-section h5 {
+    font-size: 1.2vw;
+    color:var(--color-blanco-fondo);
+}
+
+.footer-section h5:hover {
+    color: var(--color-negro-texto);
+    transition: color 0.3s ease;
+}
+
+.footer-section p:hover {
+    color:var(--color-negro-texto);
+    transition: color 0.3s ease;
+}
+
+.footer-section a {
+    text-decoration: none;
+    font-size: 1em;
+}
+
+.footer-section a:hover {
+    color: var(--color-negro-texto);
+    transition: color 0.3s ease;
+}
+
+.newsletter_wrapper {
+    height: 40vw;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: var(--color-rosa-hover);
+    padding-right: 4em;
+}
+
+.newsletter_wrapper h2 {
+    color: var(--color-blanco-fondo);
+    position: relative;
+    margin-bottom: 0.3em;
+    font-size: 3.2vw;
+}
+
+.newsletter_wrapper p {
+    color: var(--color-blanco-fondo);
+    font-size: 1.5vw;
+    line-height: 2.2vw;
+    margin: 0;
+}
+
+.input-field {
+    margin: 1.4em 0em 0.8em 0em;
+    opacity: 1;
+    width: 24em;
+    height: 3em;
+    background-color: white;
+    display: flex;
+    justify-content: flex-start;
+    border-radius: 25px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.input-field input {
+    border-style: hidden;
+    width: 100%;
+    margin: 0px 0px 0px 23px;
+    background-color: transparent;
+}
+
+.input input:focus {
+    outline: none; /* Quitar el contorno predeterminado */
+    border: none; /* Quitar el borde predeterminado */
+}
+
+.enviar button {
+    width: 8.7em;
+    height: 3em;
+    border-style: solid;
+    background-color: var(--color-blanco-fondo);
+    border-radius: 25px;
+    color: var(--color-rosa-hover);
+    border-color: var(--color-rosa-hover);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.enviar button:hover {
+    background-color: var(--color-verde-links);
+    border-style: solid;
+    border-width: 3px;
+    color: black;
+    border-color: var(--color-blanco-fondo);
+}
 
 
 
 /* /////////////////////////////////////////// */
 
 /* MEDIA QUERIES */
+
+
+@media only screen and (max-width: 1150px) {
+
+    .footer {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    
+    .redesaboutus {
+        width: 100%;
+        padding: 0em;
+        margin-bottom: 4em;
+    }
+    
+    .redes {
+        width: 100%;
+        margin-bottom: 0;
+    }
+    
+    .redes i {
+        margin: 6vw;
+        width: 5vw;
+        font-size: 6vw;
+    }
+    
+    .footer-section {
+        margin: 5vw;
+    }
+    
+    .footer-section h5 {
+        font-size: 1.7vw;
+    }
+    
+    .infofooter p {
+        font-size: 1.7vw;
+        line-height: 2.9vw;
+    }
+    
+    .newsletter_wrapper {
+        width: 100%;
+        height: 70vw;
+        padding: 0em;
+        margin: 1em 0em 1em 0em;
+    }
+    
+    .newsletter_wrapper h2 {
+        font-size: 5vw;
+        margin-bottom: 0.5em;
+    }
+    
+    .newsletter_wrapper p {
+        padding: 0em 9em 0em 9em;
+        font-size: 2.2vw;
+        line-height: 2.8vw;
+    }
+    
+    .newsletter p {
+        font-size: 2vw;
+        line-height: 2.7vw;
+    }
+}
 
 @media screen and (max-width: 1200px) {
     #text h3 {
@@ -981,6 +1199,80 @@ div.card-img > img {
     div.section_title img.LED_flecha {
         height: 3em;
     }
+
+    .redesaboutus {
+        margin: 0;
+        height: 100%;
+    }
+        
+    .redes {
+        margin-bottom: 0.5em;
+        font-size: 12vw;
+    }
+        
+    .redes i {
+        font-size: 7vw;
+        margin: 7vw;
+    }
+        
+    .infofooter {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background-color: #f61067;
+        margin-bottom: 3em;
+    }
+        
+    .infofooter p {
+        font-size: 1.6vw;
+    }
+        
+    .footer-section {
+        margin: 7vw;
+    }
+        
+    .footer-section h5 {
+        font-size: 4.5vw;
+        margin-bottom: 1.2em;
+    }
+        
+    .footer-section p {
+        font-size: 0.7em;
+        margin-bottom: 1.1em;
+    }
+        
+    .newsletter_wrapper {
+        height: 100%;
+        margin-bottom: 5em;
+        margin-top: 5em;
+    }
+        
+    .newsletter_wrapper h2 {
+        font-size: 7vw;
+        margin-bottom: 0em;
+    }
+        
+    .newsletter_wrapper p {
+        padding: 1.3em;
+        font-size: 3.5vw;
+        line-height: 5vw;
+    }
+        
+    .input-field {
+        width: 73vw;
+        margin: 0em;
+        margin-bottom: 0.8em;
+    }
+        
+    .input-field input {
+        font-size: 3.6vw;
+        margin: 0px 0px 0px 5vw;
+    }
+        
+    .enviar button {
+        height: 3em;
+        width: 7.5em;
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -1016,11 +1308,11 @@ div.card-img > img {
     }
 
     #portada_home img.starL {
-        height: 10em;
+        height: 8em;
     }
     
     #portada_home img.starM {
-        height: 6em;
+        height: 5em;
     }
     
     #portada_home img.starS {
@@ -1040,7 +1332,7 @@ div.card-img > img {
     }
 
     #portada_home > div.row > div.col-5 > img.gato_header {
-        bottom: 12%;
+        bottom: 14%;
         height: 30%;
     }
 
@@ -1051,7 +1343,7 @@ div.card-img > img {
 
     #portada_home > div.row > div.col:last-child {
         position: absolute;
-        bottom: 15%;
+        bottom: 18%;
         padding-left: 40%;
     }
 
@@ -1170,7 +1462,7 @@ div.card-img > img {
     #portada_home > div.row > div.col-5 > img.gato_header {
         height: 25%;
         left: 15%;
-        bottom: 10%;
+        bottom: 15%;
     }
 
     #portada_home img.starL {
